--- a/ansible.cfg
+++ b/ansible.cfg
@@ -27,7 +27,7 @@ remote_port             = 22
 timeout                 = 60
 host_key_checking       = False
 ssh_executable          = /usr/bin/ssh
-private_key_file        = ~/.ssh/id_rsa
+private_key_file        = ~/.ssh/rsync-ssh
 
 force_valid_group_names = ignore
 
