--- a/cluster/core/cert-manager/kustomization.yaml
+++ b/cluster/core/cert-manager/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - letsencrypt-production.yaml
-  - letsencrypt-staging.yaml
-  - secret.sops.yaml
+  - selfsigned-cluster-issuer.yaml
+  - selfsigned-issuer.yaml
+  - selfsigned-ca.yaml
+
