--- a/ansible.cfg
+++ b/ansible.cfg
@@ -23,11 +23,12 @@ fact_caching_connection = ~/.ansible/facts_cache
 fact_caching_timeout    = 7200
 
 #--- SSH settings
+remote_user             = ubuntu
 remote_port             = 22
 timeout                 = 60
 host_key_checking       = False
 ssh_executable          = /usr/bin/ssh
-private_key_file        = ~/.ssh/rsync-ssh
+private_key_file        = ~/.ssh/k3s-rpi
 
 force_valid_group_names = ignore
 
@@ -52,6 +53,6 @@ scp_if_ssh              = smart
 transfer_method         = smart
 retries                 = 3
 timeout                 = 10
-ssh_args                = -o ControlMaster=auto -o ControlPersist=30m -o Compression=yes -o ServerAliveInterval=15s
+ssh_args                = -o IdentitiesOnly=yes -o ControlMaster=auto -o ControlPersist=30m -o Compression=yes -o ServerAliveInterval=15s
 pipelining              = True
 control_path            = %(directory)s/%%h-%%r
