Fix directory problem with flux

--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -3,3 +3,8 @@ kind: Kustomization
 resources:
   - gotk-components.yaml
   - gotk-sync.yaml
+  - ./charts/helm/metallb-charts.yaml
+  - ./charts/helm/nfs-subdir-external-provisioner-charts.yaml
+  - ./charts/helm/traefik-charts.yaml
+  - ./charts/helm/hajimari-charts.yaml
+  - ./charts/helm/jetstack-charts.yaml
