--- a/cluster/core/cert-manager/selfsigned-ca.yaml
+++ b/cluster/core/cert-manager/selfsigned-ca.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: selfsigned-ca
-  namespace: sandbox
+  namespace: cert-manager
 spec:
   isCA: true
   commonName: osm-system
