--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -16,9 +16,9 @@ spec:
         name: hajimari-charts
         namespace: flux-system
       interval: 5m
-  # dependsOn:
-  #   - name: nfs-subdir-external-provisioner
-  #     namespace: default
+  dependsOn:
+    - name: nfs-subdir-external-provisioner
+      namespace: default
   values:
     image:
       repository: ghcr.io/toboshii/hajimari
@@ -71,7 +71,7 @@ spec:
             secretName: "hajimari-tls"
     persistence:
       data:
-        enabled: false
+        enabled: true
         existingClaim: hajimari-config
     podAnnotations:
       configmap.reloader.stakater.com/reload: "hajimari-settings"
