--- a/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
+++ b/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
           - default
       nfs:
         server: 192.168.178.86
-        path: /nfs-storage
+        path: /volume1/k3s-nfs
         mountOptions: nfsvers=3
         volumeName: nfs-subdir-external-provisioner-root
         reclaimPolicy: Retain
