--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -30,19 +30,17 @@ spec:
           - default
           - networking
       name: "you"
-      # customApps:
-      #   - name: Some External Cluster Service
-      #     url: http://192.168.1.100:5000
-      #     icon: test-tube
+      customApps:
+        - name: Smart Home
+          url: "https://192.168.178.4:8123"
+          icon: home-assistant
+        - name: PiHole
+          url: "http://192.168.178.10/admin/"
+          icon: pi-hole
+        - name: Synology NAS
+          url: "https://192.168.178.86:5001"
+          icon: nas
       groups:
-        - name: Lokale Dienste
-          links:
-            - name: Smarthomeassistant
-              url: "https://192.168.178.4:8123"
-            - name: Synology NAS
-              url: "https://192.168.178.86:5001"
-            - name: PiHole
-              url: "http://192.168.178.10/admin/"
         - name: Tech
           links:
             - name: Hacker News
@@ -61,14 +59,14 @@ spec:
           hajimari.io/icon: "weather-sunset"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
-          - host: "hajimari.${SECRET_DOMAIN}"
+          - host: "start.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - "hajimari.${SECRET_DOMAIN}"
-            secretName: "hajimari-tls"
+              - "start.${SECRET_DOMAIN}"
+            secretName: "start-tls"
     persistence:
       data:
         enabled: true
