--- a/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
+++ b/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
@@ -17,12 +17,12 @@ spec:
         namespace: flux-system
   values:
     nfs-subdir-external-provisioner:
-      image:
-        repository: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner
-        tag: v4.0.2    
-      namespaceSelector:
-        matchNames:
-          - default
+      # image:
+      #   repository: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner
+      #   tag: v4.0.2    
+      # namespaceSelector:
+      #   matchNames:
+      #     - default
       nfs:
         server: 192.168.178.86
         path: /volume1/k3s-nfs
