Fix wrong namespace for pvc

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -18,7 +18,7 @@ spec:
       interval: 5m
   dependsOn:
     - name: nfs-subdir-external-provisioner
-      namespace: default
+      namespace: nfs-system
   values:
     image:
       repository: ghcr.io/toboshii/hajimari
