--- a/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
+++ b/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
@@ -16,46 +16,46 @@ spec:
         name: nfs-subdir-external-provisioner-charts
         namespace: flux-system
   values:
-    nfs-subdir-external-provisioner:
+    # nfs-subdir-external-provisioner:
       # image:
       #   repository: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner
       #   tag: v4.0.2    
       # namespaceSelector:
       #   matchNames:
       #     - default
-      nfs:
-        server: 192.168.178.86
-        path: /volume1/k3s-nfs
-        mountOptions: nfsvers=3
-        volumeName: nfs-subdir-external-provisioner-root
-        reclaimPolicy: Retain
-      storageClass:
-        create: true
-        defaultClass: true
-        name: nfs-client
-        allowVolumeExpansion: true
-        reclaimPolicy: Delete
-        archiveOnDelete: true
-        onDelete:
-        pathPattern:
-        accessModes: ReadWriteOnce
-        annotations: {}
-      leaderElection:
-        enabled: true
-      rbac:
-        create: true
-      podSecurityPolicy:
-        enabled: false
-      podAnnotations: {}
-      serviceAccount:
-        create: true
-        annotations: {}
-        name:
-      resources: {}
-        # limits:
-        #  cpu: 100m
-        #  memory: 128Mi
-        # requests:
-        #  cpu: 100m
-        #  memory: 128Mi
-      labels: {}
+    nfs:
+      server: 192.168.178.86
+      path: /volume1/k3s-nfs
+      mountOptions: nfsvers=3
+      volumeName: nfs-subdir-external-provisioner-root
+      reclaimPolicy: Retain
+    storageClass:
+      create: true
+      defaultClass: true
+      name: nfs-client
+      allowVolumeExpansion: true
+      reclaimPolicy: Delete
+      archiveOnDelete: true
+      onDelete:
+      pathPattern:
+      accessModes: ReadWriteOnce
+      annotations: {}
+    leaderElection:
+      enabled: true
+    rbac:
+      create: true
+    podSecurityPolicy:
+      enabled: false
+    podAnnotations: {}
+    serviceAccount:
+      create: true
+      annotations: {}
+      name:
+    resources: {}
+      # limits:
+      #  cpu: 100m
+      #  memory: 128Mi
+      # requests:
+      #  cpu: 100m
+      #  memory: 128Mi
+    labels: {}
