--- a/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
+++ b/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
@@ -17,9 +17,9 @@ spec:
         namespace: flux-system
   values:
     # nfs-subdir-external-provisioner:
-      # image:
-      #   repository: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner
-      #   tag: v4.0.2    
+    image:
+      repository: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner
+      tag: v4.0.2    
       # namespaceSelector:
       #   matchNames:
       #     - default
