--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:BuQ5S4m1ktGG,iv:s2eGjS7zSbOIhsk9pRuqo4czT0bpdPyGq5zakIF/fI4=,tag:dmgqIPQlpwe6ADelLQcRzw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:cYv86JS0Ktt9,iv:GKE7aiLsRxEhX8yszjdQydzf7yIznj1NXm9JtKvMK2c=,tag:eVOkHyXCP6AV5o6W7lYj2g==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
+    NFS_SERVER: ENC[AES256_GCM,data:ygxY/Sopl75jkzm/yd0=,iv:z9Jagcq9d7IANvEpgGlR3MeAhy5QOeAU+2RkPMyscEU=,tag:lJi7kbrM9zAhjwzMQ00nwA==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:6X0xB+IVPTDJHfXOitirow==,iv:nWxtOunjPlr2xL2L9L4bCDyPcMRreh7Nq03UcoyLMoc=,tag:TGtnh2cYWMUNzfKDi9IlqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +18,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2U0loNTlIUnZzbkVLellm
-            TENmelJyeVAwZ0RzdkdXWEJSZ0lmeHkwUFdRCmd3K2cyNTl3WU5lQUZMaEJub1Vt
-            YzRIS0VWMEhhNEtPSTVPK3k1S3dFV3cKLS0tIDRERUsrelExdDZDeDVBTnd6eHVS
-            SEdsdzAxNU5rdEk3UWczbWtNQ3VNdm8KVgPrYCVRfdi4dic6oISy27IsR8p7eiGw
-            pItTf6/KFrnIGMNOyXqV8wMZHYtFkCI1g4ByYXFObGoUs/2ggNjoKA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuNTJrYU4xZjBtbnM1UUhL
+            TTgyQ2RWTTJ5WWNDZVo2b0J1NkNXUDZ1a2hrClNXVXZaREhacXY1QjJlWnJqRS9R
+            clBqOXlHZ1ZjZmltaHI0UVo4a2RoOXMKLS0tIDJ6cGhwczNVOFcycnY2YmdacTF4
+            UEpqMHFLWFl4WUx2YlQ5N0tadlZVaUEKe18e5iz5DwFLQCnn6sCT8CnZJUPUtu/P
+            Xb4qOnwkmuyO18zNq2cgafQUTaywn5PLgpWZ8Cy4EZk/bJAIkIupqA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-26T22:30:00Z"
-    mac: ENC[AES256_GCM,data:RroLD1FlDTI3JhzIXlfpkc/hvNNyNdvtdShG53etlUTU/vdx7PNAg53azi4ziHKkT6ilAlLheIZW53a7KI2waQqo1O0eGTl/qNOiOZ9kNQzFBxtjG7ZgzWDfwpw8X2EGSkiDKg6GSPrw46hvFlpXsd3/f4LcBbX1x+tdEUc83ek=,iv:DZ89tbN1vxYQOsXtddbFQpgyfW6yd16qqCpyMsI+A/4=,tag:2ZAV9E73gGMRYmVPP3YZAA==,type:str]
+    lastmodified: "2021-11-27T18:58:07Z"
+    mac: ENC[AES256_GCM,data:VbRFPzI5rqYAVuipbCbUCps8TmLlDOAhYxWne//+B1873ASLFGWB+kXauIdVYrPZybAiRck3sqK3X5Vt4BpqX3wmd4W4VfiHeVcYUaiN+//nzPOsGbAJ6RoBPZeLj2cdzAO+RCAs2F+cvtnUbZGyNtjR52ZLUxI+t4REe3BMi3c=,iv:fbOIFfyOw0q0oBPQVNs3AzcauFzCRT2oQ0RuVxNutfs=,tag:QPwBqhmwyAYg61pQbZoqEA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
