Remove pvc from app

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -16,9 +16,9 @@ spec:
         name: hajimari-charts
         namespace: flux-system
       interval: 5m
-  dependsOn:
-    - name: nfs-subdir-external-provisioner
-      namespace: nfs-system
+  # dependsOn:
+  #   - name: nfs-subdir-external-provisioner
+  #     namespace: nfs-system
   values:
     image:
       repository: ghcr.io/toboshii/hajimari
@@ -69,7 +69,7 @@ spec:
             secretName: "start-tls"
     persistence:
       data:
-        enabled: true
+        enabled: false
         existingClaim: hajimari-config
     podAnnotations:
       configmap.reloader.stakater.com/reload: "hajimari-settings"
