--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,10 +5,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:cYv86JS0Ktt9,iv:GKE7aiLsRxEhX8yszjdQydzf7yIznj1NXm9JtKvMK2c=,tag:eVOkHyXCP6AV5o6W7lYj2g==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:fR2Kd9oomSDG,iv:UXH22zLrXVDnDae9ZcIwH0LIHmIphVHzlA4WU791Kj0=,tag:QeKzT4HC/qa2DqBSiVXoag==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:ygxY/Sopl75jkzm/yd0=,iv:z9Jagcq9d7IANvEpgGlR3MeAhy5QOeAU+2RkPMyscEU=,tag:lJi7kbrM9zAhjwzMQ00nwA==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:6X0xB+IVPTDJHfXOitirow==,iv:nWxtOunjPlr2xL2L9L4bCDyPcMRreh7Nq03UcoyLMoc=,tag:TGtnh2cYWMUNzfKDi9IlqA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:fnfC1a7QjyVYexBkygc=,iv:IwWtOBYyBnhBfmGLf4uYMqcFZiuhVaYzlEfNajnH438=,tag:diPiGY4DzVQttu3S9FNb1Q==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:Y1LXynOE/pAO8Pc244H1oQ==,iv:RS9Rlcb+h9KeDDrI0OijRY3nnMkibHCipLopn9ozovg=,tag:H2yVhSllv7deGjHQFCrOwQ==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:WOOu/dJoYq3Y2ButT2FQ6nd+JLHMl8io9xQx+D0ctYOKdmSYFK3R4x3m38FFojg/SrGAZgjHC7gXEE7iw7CdJYHOG6qn/aPEAJfRgLxo6XmyTSL9Ey47Mtib+X2OAf5w7oqUMxjwxVC7R2o3e1M7qQqfb+EZpux+,iv:nVuBzavckOMkqmgwTsGoiHiqc0IBywf9rXiH2QT5URo=,tag:iapK6HZAw2hPvfBEp7gkEA==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:2dVDswSzYBqwG1BdISg=,iv:k5peJqlyTd5/yTzsWSqMpTQR4SG94xXWv9PFbXqPdc0=,tag:tJreDIJxI+Zi/xQgn5ZGCA==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:HHsoYLY4TZVHj5sReQ==,iv:3MlIC3EVCo3n+0jyCx05ANJ2p7OK4iAA/2J0XdR7oHE=,tag:9rzcrVuIgxiM1s/MVvdfuQ==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:QKWyhuwOrRm4Edgyvw==,iv:MoZ4xhvoe94con9fIoBDlCGdJR34OnHP650MYjFRicU=,tag:KUVzCABkiqpmcUVXJHnkbw==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:fmgWoEePcRVC6e5jqycEBqZ37DHcDhoQj94SwyoBuSGcYkBgK118l0wn3bxFh+uHf0IuScJFhR4PLKUtzewxqxTiaSgPZrcEt+c0Zp8RAP/w5NMrkmfWiD9wjPc39HGP2iRtjRB3niDOCW43ewpMS3bNtXFKbSB/6SjwWmiwqJmZJdSv1R9U7xE52OReuoKKHuYiGypBYiQp097a8LH8p28aAKCcYF/VuwdrP7zVYrCdxMLRDgPy,iv:r93Gv3+pN3FSjBJuRpaXwRAlzOaYtRMxr1kNWFVpeug=,tag:2tWjDxBR16CGYq3FTaSNaQ==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:nwA2F8syfVjq92xsZl5LTQ==,iv:eF6XXqZqibfpQQfPKltgxBDEj6fbGQdr53vzjacVEZw=,tag:/0Fe04V05SPzy20W1uznBQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +24,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuNTJrYU4xZjBtbnM1UUhL
-            TTgyQ2RWTTJ5WWNDZVo2b0J1NkNXUDZ1a2hrClNXVXZaREhacXY1QjJlWnJqRS9R
-            clBqOXlHZ1ZjZmltaHI0UVo4a2RoOXMKLS0tIDJ6cGhwczNVOFcycnY2YmdacTF4
-            UEpqMHFLWFl4WUx2YlQ5N0tadlZVaUEKe18e5iz5DwFLQCnn6sCT8CnZJUPUtu/P
-            Xb4qOnwkmuyO18zNq2cgafQUTaywn5PLgpWZ8Cy4EZk/bJAIkIupqA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZzAzd0swU2ZMOGpGTDZi
+            WDE5YXBHMjkwdmo4QzVLVlAwbDk3TVZxM2dnClRCRFlMbVFiVDVHN1VLZVQ5aVgz
+            ODFMT2JNLzFmQ0JkRy9KQUFFdit5MFkKLS0tIFFUMDFzUU9UWktjYVNreDZzWUZr
+            cTh6Wml1T3dabU1GN1Jodnl5VUlHbE0K+SpA3nSMkN2xEboZDapdC6lCjng7EI9G
+            pETZB0QAkKaLtZZ+ZEQtoMh/HC6raJOzHFx+MgP2f47tm3Xmak+fBw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-27T18:58:07Z"
-    mac: ENC[AES256_GCM,data:VbRFPzI5rqYAVuipbCbUCps8TmLlDOAhYxWne//+B1873ASLFGWB+kXauIdVYrPZybAiRck3sqK3X5Vt4BpqX3wmd4W4VfiHeVcYUaiN+//nzPOsGbAJ6RoBPZeLj2cdzAO+RCAs2F+cvtnUbZGyNtjR52ZLUxI+t4REe3BMi3c=,iv:fbOIFfyOw0q0oBPQVNs3AzcauFzCRT2oQ0RuVxNutfs=,tag:QPwBqhmwyAYg61pQbZoqEA==,type:str]
+    lastmodified: "2021-11-28T17:48:44Z"
+    mac: ENC[AES256_GCM,data:3OZvsxtjumP0bYRFsFfT8O1lbo8N1a9BIG6bPCdNeAqqGag1agYUcUwbzJFWJjUhyT3zgOyCpHrOhMHNGPnG41S0zrG1wilMctbvqA3pmTabarYMwn8STB0eW1Mt55bLJ1MM27/BLi9BMUS/dzEpfbIUafF+3WWrGwjJB5FXWZ8=,iv:16pSwI/JyI3ylOerypR8v7t9vU/bewTBYB3hN6X7wlE=,tag:IWQqrq9xoZRJd1n42syb3g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
