--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -147,7 +147,7 @@ spec:
               insecure_skip_verify: true
             authorization:
               type: Bearer
-              secret: "${HOME_ASSISTANT_BEARER}"
+              credentials: "${HOME_ASSISTANT_BEARER}"
             static_configs:
               - targets:
                 - "${HOME_ASSISTANT_SERVER}:8123"
