--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
         matchNames:
           - default
           - networking
+          - monitoring
       name: "you"
       customApps:
         - name: Smart Home
