--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -58,7 +58,10 @@ spec:
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"         
       hosts:
-      - "grafana.${SECRET_DOMAIN}"
+        - host: "grafana.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix      
       tls:
       - hosts:
         - "grafana.${SECRET_DOMAIN}"
