--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
         hajimari.io/icon: "chart-areaspline"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"  
-        cert-manager.io/private-key-secret-name: "selfsigned-ca"       
+        cert-manager.io/private-key-secret-name: "root-secret"       
       hosts:
         - host: "grafana.${SECRET_DOMAIN}"
           paths:
