--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -57,12 +57,11 @@ spec:
         hajimari.io/icon: "chart-areaspline"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"  
-        cert-manager.io/private-key-secret-name: "root-secret"       
+        cert-manager.io/private-key-secret-name: "root-secret"
+      path: /
+      pathType: Prefix     
       hosts:
-        - host: "grafana.${SECRET_DOMAIN}"
-          paths:
-            - path: /
-              pathType: Prefix      
+        - "grafana.${SECRET_DOMAIN}"       
       tls:
         - hosts:
           - "grafana.${SECRET_DOMAIN}"
