--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -68,6 +68,7 @@ spec:
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
+          cert-manager.io/private-key-secret-name: "root-secret"
         hosts:
           - "alert-manager.${SECRET_DOMAIN}"
         tls:
@@ -113,6 +114,7 @@ spec:
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
+          cert-manager.io/private-key-secret-name: "root-secret"
         hosts:
           - "prometheus.${SECRET_DOMAIN}"
         tls:
