Add missing tls-secret

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -65,6 +65,7 @@ spec:
       tls:
         - hosts:
           - "grafana.${SECRET_DOMAIN}"
+          secretName: "root-secret"
     persistence:
       enabled: true
       existingClaim: grafana-config
