--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -74,6 +74,7 @@ spec:
         tls:
           - hosts:
               - "alert-manager.${SECRET_DOMAIN}"
+            secretName: "root-secret"
       alertmanagerSpec:
         storage:
           volumeClaimTemplate:
@@ -120,6 +121,7 @@ spec:
         tls:
           - hosts:
               - "prometheus.${SECRET_DOMAIN}"
+            secretName: "root-secret"
       thanosService:
         enabled: false
       thanosServiceMonitor:
