--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -65,7 +65,7 @@ spec:
       tls:
         - hosts:
           - "grafana.${SECRET_DOMAIN}"
-          secretName: "root-secret"
+          secretName: "grafana-tls-secret"
     persistence:
       enabled: true
       existingClaim: grafana-config
