--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -74,7 +74,7 @@ spec:
         tls:
           - hosts:
               - "alert-manager.${SECRET_DOMAIN}"
-            secretName: "root-secret"
+            secretName: "alert-manager-tls-secret"
       alertmanagerSpec:
         storage:
           volumeClaimTemplate:
@@ -121,7 +121,7 @@ spec:
         tls:
           - hosts:
               - "prometheus.${SECRET_DOMAIN}"
-            secretName: "root-secret"
+            secretName: "prometheus-tls-secret"
       thanosService:
         enabled: false
       thanosServiceMonitor:
