Fix wrong scheme for home-assistant

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -145,7 +145,7 @@ spec:
                   storage: 10Gi
         additionalScrapeConfigs:
           - job_name: "home-assistant"
-            scheme: https
+            scheme: http
             metrics_path: /api/prometheus
             tls_config:
               insecure_skip_verify: true
