--- a/cluster/apps/monitoring/alertmanager-discord/deployment.yaml
+++ b/cluster/apps/monitoring/alertmanager-discord/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alertmanager-discord
+  namespace: monitoring
   labels:
     app.kubernetes.io/name: alertmanager-discord
 spec:
