--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -113,6 +113,10 @@ spec:
               resources:
                 requests:
                   storage: 1Gi
+    kubeScheduler:
+      enabled: false
+    kubeControllerManager:
+      enabled: false
     nodeExporter:
       serviceMonitor:
         relabelings:
