--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -53,11 +53,10 @@ spec:
     alertmanager:
       config:
         global:
-          slack_api_url: "${SECRET_ALERT_MANAGER_DISCORD_WEBHOOK}"
           resolve_timeout: 5m
         receivers:
           - name: "null"
-          - name: "discord"
+          - name: "discord_webhook"
             webhook_config:
               - url: http://alertmanager-discord:9094
                 send_resolved: true
@@ -76,12 +75,12 @@ spec:
           group_wait: 30s
           group_interval: 5m
           repeat_interval: 6h
-          receiver: "discord"
+          receiver: "discord_webhook"
           routes:
             - receiver: "null"
               match:
                 alertname: Watchdog
-            - receiver: 'discord'
+            - receiver: 'discord_webhook'
               match_re:
                 severity: critical|warning|error
               continue: true
