--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -59,8 +59,8 @@ spec:
           - name: "null"
           - name: "discord_webhook"
             webhook_config:
-              - url: http://alertmanager-discord:9094
-                send_resolved: true
+              - url: "http://alertmanager-discord:9094"
+                #send_resolved: true
                 # title: |-
                 #   [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }}{{ else }}{{ .CommonLabels.alertname }}{{ end }}
                 # text: >-
