Move secrets into namespace

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,16 +5,13 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:fR2Kd9oomSDG,iv:UXH22zLrXVDnDae9ZcIwH0LIHmIphVHzlA4WU791Kj0=,tag:QeKzT4HC/qa2DqBSiVXoag==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:ZP8tVCMOiGOD,iv:tAk+VCBo5qyeB2OqlF997lrRA0QzbweAzo1a30PIUmU=,tag:rfOuP0631nVl4EiwPjkqcw==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:fnfC1a7QjyVYexBkygc=,iv:IwWtOBYyBnhBfmGLf4uYMqcFZiuhVaYzlEfNajnH438=,tag:diPiGY4DzVQttu3S9FNb1Q==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:Y1LXynOE/pAO8Pc244H1oQ==,iv:RS9Rlcb+h9KeDDrI0OijRY3nnMkibHCipLopn9ozovg=,tag:H2yVhSllv7deGjHQFCrOwQ==,type:str]
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:WOOu/dJoYq3Y2ButT2FQ6nd+JLHMl8io9xQx+D0ctYOKdmSYFK3R4x3m38FFojg/SrGAZgjHC7gXEE7iw7CdJYHOG6qn/aPEAJfRgLxo6XmyTSL9Ey47Mtib+X2OAf5w7oqUMxjwxVC7R2o3e1M7qQqfb+EZpux+,iv:nVuBzavckOMkqmgwTsGoiHiqc0IBywf9rXiH2QT5URo=,tag:iapK6HZAw2hPvfBEp7gkEA==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:2dVDswSzYBqwG1BdISg=,iv:k5peJqlyTd5/yTzsWSqMpTQR4SG94xXWv9PFbXqPdc0=,tag:tJreDIJxI+Zi/xQgn5ZGCA==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:HHsoYLY4TZVHj5sReQ==,iv:3MlIC3EVCo3n+0jyCx05ANJ2p7OK4iAA/2J0XdR7oHE=,tag:9rzcrVuIgxiM1s/MVvdfuQ==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:QKWyhuwOrRm4Edgyvw==,iv:MoZ4xhvoe94con9fIoBDlCGdJR34OnHP650MYjFRicU=,tag:KUVzCABkiqpmcUVXJHnkbw==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:fmgWoEePcRVC6e5jqycEBqZ37DHcDhoQj94SwyoBuSGcYkBgK118l0wn3bxFh+uHf0IuScJFhR4PLKUtzewxqxTiaSgPZrcEt+c0Zp8RAP/w5NMrkmfWiD9wjPc39HGP2iRtjRB3niDOCW43ewpMS3bNtXFKbSB/6SjwWmiwqJmZJdSv1R9U7xE52OReuoKKHuYiGypBYiQp097a8LH8p28aAKCcYF/VuwdrP7zVYrCdxMLRDgPy,iv:r93Gv3+pN3FSjBJuRpaXwRAlzOaYtRMxr1kNWFVpeug=,tag:2tWjDxBR16CGYq3FTaSNaQ==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:nwA2F8syfVjq92xsZl5LTQ==,iv:eF6XXqZqibfpQQfPKltgxBDEj6fbGQdr53vzjacVEZw=,tag:/0Fe04V05SPzy20W1uznBQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:WfaIVtH32xgicskPsps=,iv:fHLl3MM9CsEeXHdYpVxs/5GT3xtgZZlmXMnCWhULDcQ=,tag:BZBiTBRK3axo6hUM0A48ng==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:2wJYDGJqSpyYdYZDWeiu9A==,iv:T+CAswX6NxGLUexSeXBxa+E+g7WnQvsNi3PHf060wC8=,tag:8BbnBI2o8X4j4M6AdugkLg==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:Min7xOl4V46MkSlXRsk=,iv:sDsOaVFTqbHCAsrzoLfgHmERWJGKxqiSvWJFFF7iXGg=,tag:zajOBcatpwU5LjxbjdnVVA==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:xtYPIU7PVZ9sN+3KKQ==,iv:EKjfIX8N/S1A+Ft4m+QGGgj7iuouzsY8Ij0O7bUCNS0=,tag:RXY0Y/9+/JXxRW1w02P2pg==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:H8Q0LaLuz3sQ7PDVKQ==,iv:rq9leLlcQgVG49o+E1Xao6cqIpT4mwE8/RheWxKyISM=,tag:YpVWdK9eSyZ/JILk2dGE1Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +21,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZzAzd0swU2ZMOGpGTDZi
-            WDE5YXBHMjkwdmo4QzVLVlAwbDk3TVZxM2dnClRCRFlMbVFiVDVHN1VLZVQ5aVgz
-            ODFMT2JNLzFmQ0JkRy9KQUFFdit5MFkKLS0tIFFUMDFzUU9UWktjYVNreDZzWUZr
-            cTh6Wml1T3dabU1GN1Jodnl5VUlHbE0K+SpA3nSMkN2xEboZDapdC6lCjng7EI9G
-            pETZB0QAkKaLtZZ+ZEQtoMh/HC6raJOzHFx+MgP2f47tm3Xmak+fBw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxczRwRS9jM2o5SmlURHpK
+            SUFnNmYwOHNzTkIrTHQvZ3dFNldYdFdXcGhvCjhnQ29kZXdnSllNNy90UlhmYjBY
+            YXVadzZueU10ZWVDK0prRkpTQmN1T1EKLS0tIHBTcWF6azhSTjFYTjJvekt4aTVS
+            cnpmNTVDYXJrbnNZSEh0eUpGUUtUbW8KC172GlB9JxGEpmw3Rlmji4Ow5apUGqKD
+            USjj34i/7RcjLz4Ta+kGmUAkYIC1/tKuCKnXDxfi+QS6sfMfBsQ37w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-28T17:48:44Z"
-    mac: ENC[AES256_GCM,data:3OZvsxtjumP0bYRFsFfT8O1lbo8N1a9BIG6bPCdNeAqqGag1agYUcUwbzJFWJjUhyT3zgOyCpHrOhMHNGPnG41S0zrG1wilMctbvqA3pmTabarYMwn8STB0eW1Mt55bLJ1MM27/BLi9BMUS/dzEpfbIUafF+3WWrGwjJB5FXWZ8=,iv:16pSwI/JyI3ylOerypR8v7t9vU/bewTBYB3hN6X7wlE=,tag:IWQqrq9xoZRJd1n42syb3g==,type:str]
+    lastmodified: "2021-12-04T11:16:02Z"
+    mac: ENC[AES256_GCM,data:5kdwgPLvjMJG+PjSLDMOU+KOtXHOh3clpMj7lc8+jyifrKIk6B54BbRamBTA227ELphxUAzQJF5TnK+aGkyrAZRacBpC1gf75MG2KmMtCtvkXJMyhvdqCfVGlvc/2QOzLC1bbGFSf5YVxA+bR2iHhuHg6M0ZFWSuH4LhmVEKios=,iv:S6pUiX/MqBb6iV7j5upBALpSq/ht5WcZk/4rxrOCyes=,tag:3OxUVp/rYmNdST6lJ6cwHw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
