--- a/cluster/apps/monitoring/kube-prometheus-stack/secrets.sops.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/secrets.sops.yaml
@@ -2,10 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: homeassistant-bearer-token
+    name: monitoring-secrets
     namespace: monitoring
 stringData:
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:RPleV07JNvCHn8VDtCahdOrmB1TBCeXyWU304bMAvWfP4W9aa+oyl/URDxANlVgisKHSMYDOeabelUTqMPBmU8bgQk7wZw+kr4x1wXFl50iUI1ZhaqVqt/DsfQ+sU77kARi5TyqeF/4nUgodeKBLYC/nrJ7q46XXAEIT78YCLaTePIFw6s2SiHAItXmQ8UXKfMH4PtOMJ8UHONfW1hdn2xiXrQ7GBJHsqx3JecAlB0w/oqpKVu/9,iv:9hBJSkIwhSHp23BaTGmuMxtdck0HzKZi2DywRcDaeBc=,tag:fD4ZkV3J5RrW14zX8JpCNA==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:Ht4huzqcmIfPu2QckT4TEJ2fHoGQpvVgD6gWkeaYTWCAE98YArkLJRjMD26WbLUvYfT6c/IOthdBdsiFhTT6GZ34oT1QoLxhZtLSMvtlZGlGJatBn1Ty8/FD25pGzUC1DZzeOErXrSiH+lZATHVM7/rpXXMY3+Q1b8VnZIftupsynrZTLrCbNdJUGKjcQCB79QktHcVtWIg1bePX/CDEoJtHzkbbveVAy0L0KzyUrjtYXC5gDZXT,iv:tLnJnlbCtk+36bncIBYy1zX/3Wtyw09swDMYt8xob/8=,tag:9kHCkwbhMaAdP4rLqLnjlQ==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:Gq3+aIo+ygetMK4s1uTLR0yh0NbikKFbATvIUDz+sptIlb7GuIa8yG0+2Mhl/Fbr1URnR8BS4XreTBixNKMg50SE/CP1TGOuauUgaOOh8m+WLuLDaNgv8HVO44qLcqVM8WJ0Er3RXRlxotr7+A/lqpfFydBn2Ucx,iv:gr6h+1zXgCWHxSMYC1JbpQi6WfNzMJ5Au9Bw9PBUS+M=,tag:+/mw+6qdog4DxLpXVc+yrw==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:eXJxrTt3l3LjD3dhfiZvcQ==,iv:cmIwPmwv+t0TW9E9/4TH3fOJLHZYuZ/U666ei8CEeNI=,tag:x6ZR1eY5a40pjDw3uIgURw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +17,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5QUpDcFZBazJnRG5keFdI
-            cUdhOXVNT1NJaTNxTnVVYzdYakw2cEtlcFJZCnc2WE45L0poOFhiNDMvMlNMbXJK
-            ME4yMFNvWDdTWHhRaHRJTXNHR204V00KLS0tIElOVE8yMjdCYnRQTDE1b0VrUFdo
-            N05HNnJIa3NJd2c4MUV4cktnSjJidDQKg3T4oYk3Q7fs0MMwxSellnXqkpSOp+Fe
-            E8tjdnb5kBgwYQZhsJB4qMyLYS36uH9Iwq3IeTiFH7H1K7JrrmRAJg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZMUwwVjFXbmhVbDNoZ29q
+            SnQxK0hrR0I5SFEvVzFSeGlZak13dmFMQTFJCk5yRkRUL3lEM05GKzdUbWZqOHFK
+            WDZ4bENJd3dmcDVWdWcyTmcyd0JLZGMKLS0tICtrZzd2RXU0ZkNSNFBiQVNkWXRn
+            eDErbkVYeGdqQUczMDNvUUcySTV3Z3cKh0sgLEsRrnP0ISqFYBH9sgMAYCMCeu2p
+            XpGR7OAdX1xYa7i1A0GnUINFSGBUp+1Kr0BKJ6WB67XSFvl92ZpsIw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-28T17:49:21Z"
-    mac: ENC[AES256_GCM,data:J9t0Cp0JSNxHUU/BBRLpiJMZQ2R7htaG45MS5z2CeR89R9m5E6zoB/ZxalVGNKcf5IZelReNL6OUypeI89b4FKln1L1FvL0YcNkS6u8nxYl/A1t5bHZN2ABjryvMpNNT5dg6Fiqjd0jYFRXIO3t3ng0InrXJlD+v5fKhOZ7wOc0=,iv:sQ4S9hgS3+LMy4L1H5CYa3o/LBf5uCzOyNXIcKpW9Zo=,tag:VuvOX15CItOQpoNQNb+gPQ==,type:str]
+    lastmodified: "2021-12-04T11:15:45Z"
+    mac: ENC[AES256_GCM,data:NDLSsHjJaoajCdV4EUxONI1iv+EEFybwjayIT/LoRPK+Q8y/cAIAPTGeM/RkG42jn7wFJE17B/8/7DSfqpiCerI7qS+SXnBTt+HjW49jx16nzrHLFQAqXU2kP7rMLhlqmTsEgMs7UEWdzDFLzqVx5SfBQ+7DZaBiqDtOAEFlZB4=,iv:FBwmhQndrYa/5ebaQ5CdhcPcYX3gPnjM/tPuLz28eaM=,tag:pKqYwda+cCYA3VQGC4/pUQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
