Make all nodes master

--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -5,9 +5,10 @@ kubernetes:
       hosts:
         k8s-0:
           ansible_host: 192.168.178.83
-    worker:
-      hosts:
         k8s-1:
           ansible_host: 192.168.178.84
         k8s-2:
-          ansible_host: 192.168.178.85
+          ansible_host: 192.168.178.85          
+    # worker:
+    #   hosts:
+
