--- a/provision/ansible/inventory/group_vars/master/k3s.yml
+++ b/provision/ansible/inventory/group_vars/master/k3s.yml
@@ -12,6 +12,9 @@ k3s_server:
     # kube-vip
     - "{{ kubevip_address }}"
   # Disable Docker - this will use the default containerd CRI
+# (dict) k3s settings for all worker nodes
+k3s_agent:
+  node-ip: "{{ ansible_host }}"
   docker: false
   flannel-backend: "none" # This needs to be in quotes
   disable:
