--- a/provision/ansible/inventory/group_vars/master/k3s.yml
+++ b/provision/ansible/inventory/group_vars/master/k3s.yml
@@ -1,7 +1,7 @@
 ---
 # https://rancher.com/docs/k3s/latest/en/installation/install-options/server-config/
 # https://github.com/PyratLabs/ansible-role-k3s
-
+timezone: "Europe/Berlin"
 # (bool) Specify if a host (or host group) are part of the control plane
 k3s_control_node: true
 k3s_etcd_datastore: true
