--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -4,11 +4,11 @@ kubernetes:
     master:
       hosts:
         k8s-0:
-          ansible_host: 192.168.178.83
+          ansible_host: 192.168.178.83         
+    worker:
+      hosts:
         k8s-1:
           ansible_host: 192.168.178.84
         k8s-2:
-          ansible_host: 192.168.178.85          
-    # worker:
-    #   hosts:
+          ansible_host: 192.168.178.85      
 
