--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,13 +5,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:ZP8tVCMOiGOD,iv:tAk+VCBo5qyeB2OqlF997lrRA0QzbweAzo1a30PIUmU=,tag:rfOuP0631nVl4EiwPjkqcw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:iXmCYYIPUE+3,iv:W4EPR/irFYZFX0uFZqmt/6XmDSbhGrmPYaNQQdTUtt0=,tag:S9FoDgz655n9V7T0D7aBMw==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:WfaIVtH32xgicskPsps=,iv:fHLl3MM9CsEeXHdYpVxs/5GT3xtgZZlmXMnCWhULDcQ=,tag:BZBiTBRK3axo6hUM0A48ng==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:2wJYDGJqSpyYdYZDWeiu9A==,iv:T+CAswX6NxGLUexSeXBxa+E+g7WnQvsNi3PHf060wC8=,tag:8BbnBI2o8X4j4M6AdugkLg==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:Min7xOl4V46MkSlXRsk=,iv:sDsOaVFTqbHCAsrzoLfgHmERWJGKxqiSvWJFFF7iXGg=,tag:zajOBcatpwU5LjxbjdnVVA==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:xtYPIU7PVZ9sN+3KKQ==,iv:EKjfIX8N/S1A+Ft4m+QGGgj7iuouzsY8Ij0O7bUCNS0=,tag:RXY0Y/9+/JXxRW1w02P2pg==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:H8Q0LaLuz3sQ7PDVKQ==,iv:rq9leLlcQgVG49o+E1Xao6cqIpT4mwE8/RheWxKyISM=,tag:YpVWdK9eSyZ/JILk2dGE1Q==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:Xkeu9aU52801wBCrtKM=,iv:+tAK6/PuCl5C/XrJBmq9mVJzKynYCCIK2QsG73ZClKs=,tag:74gN4wqdU5E/kVtL/7pVKQ==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:aiC1hctfdFYWH6KqRRXnsA==,iv:4tM9mKrNHiNXFc75wiGlw5J3a2HEfOTBNAXXskvYeuQ=,tag:OnoocMSHGEmPLFSSBYE4FA==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:S54D9Nnl/VvqUltAyxw=,iv:4pxsCwYEPW232fCTmnTPDhVFMlgaU6+jFPIv7ghEyj4=,tag:+OHVyDY2bhtY6DhKc8Ac4A==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:QX4eZNIcnb1D2bLhqg==,iv:76ixZEoKXsq/nKU9ZhL+bp/12hxiky6tpoH8wfl0/To=,tag:2dIAOpFmL+CiJlkqHNmGHA==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:wMPehDTLZi2pmhrTmA==,iv:Wjf9z2mCMvbxtqOC+IDP37skXTh+rclTnABJYI7NcSM=,tag:nuoOYgIMVRAxOFJJp6xzDw==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:C47pNWptOwuLQJFFVeBp6Tk0+RgCjFZPF7hglxg2wzn8sAf996e+fllwl5M4g697yZG8I9O7WT1mF6uwgdxkbxZVgiTLFnhmuqKr8oF7AeRnk/xbGZl4h2stfjU11eDBfD8mlj+af3EOlSoJCKknTj9qarzQGuyEbdulbuwPMpLU6SQrisIFTy0xGA6ObFujKOnHMQbhkMKRs9Z58FYwvVA7c/Kd+ysi3SsiP5JLVyAoHnk0DHD1,iv:ZvPH20K5duoiPPP3uyh1IQIYShEkqE85vYSjWUfx44E=,tag:i90UFwbR5tRZHaOawspSVw==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:pbRp2x7N67TFxjSkjf+nEjTErL8XwWjtfpAd3StZR7eFUnhOOtmvCDYXUJvABs6MWO5CAxLjHf7WNe1nDNiV5BxWvILUPe5LH+jsErm2bFcJX7FPEEb1HxcEiS6ehMTTCiPTFs4Uer0R4O9A1G+0Kqqm5gE5YLuT,iv:dgQrPlM33T5k6EWFbI7hJVIXvUziiF5E4ioxC1SfmJU=,tag:3I4j8JQHglocfoBBJ+wF8g==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:IeL1Tyma9AEz40gEgKDXAQ==,iv:dYPBw/DY/zlElW9yaDcvM6nBtjeaTAX0aHI6kwV1lNc=,tag:Y60T31tZ6jaSuiEeTAjsQg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,14 +24,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxczRwRS9jM2o5SmlURHpK
-            SUFnNmYwOHNzTkIrTHQvZ3dFNldYdFdXcGhvCjhnQ29kZXdnSllNNy90UlhmYjBY
-            YXVadzZueU10ZWVDK0prRkpTQmN1T1EKLS0tIHBTcWF6azhSTjFYTjJvekt4aTVS
-            cnpmNTVDYXJrbnNZSEh0eUpGUUtUbW8KC172GlB9JxGEpmw3Rlmji4Ow5apUGqKD
-            USjj34i/7RcjLz4Ta+kGmUAkYIC1/tKuCKnXDxfi+QS6sfMfBsQ37w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRd1ozbFlrNWhEa1NOQVFp
+            V0hjWHVXWWpSOU5hdElDU0pPdGg2RHZJOFJBCklMcFg5eWpxV3JrN0x0L1BGRWZO
+            RGxSeTl5ODk1ZDg2UG4zNTFoQTR4QzQKLS0tIGQzdFVyV2Q5alNWM3I3eEZnMVVt
+            cjZNbjdmN3FCMGgwL1YzaDZ5NlR3ZG8KQUosxVkTXHAzYz1r0zvGqivBePCtUjqy
+            h/4PAeqhmlozRQuc/ctSrFp85rsqTG4JmzuGAsnQ+Mb5XlYxz0rLdA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T11:16:02Z"
-    mac: ENC[AES256_GCM,data:5kdwgPLvjMJG+PjSLDMOU+KOtXHOh3clpMj7lc8+jyifrKIk6B54BbRamBTA227ELphxUAzQJF5TnK+aGkyrAZRacBpC1gf75MG2KmMtCtvkXJMyhvdqCfVGlvc/2QOzLC1bbGFSf5YVxA+bR2iHhuHg6M0ZFWSuH4LhmVEKios=,iv:S6pUiX/MqBb6iV7j5upBALpSq/ht5WcZk/4rxrOCyes=,tag:3OxUVp/rYmNdST6lJ6cwHw==,type:str]
+    lastmodified: "2021-12-04T17:32:38Z"
+    mac: ENC[AES256_GCM,data:xB9QYN48zzTiZXDyKpPy5CqwCKY9whLzEAaTwDn05IQcGHresY4gWyDNss0DstQ5eenINKht0Enhf1EGz3dwXR5QEYITueW7KoKuzhAfwIVdFiNvT2uXYZ0aDbE4SB0wP1zP0UfcqhY/N7/7C7Nb9AY5ALbpDyAPHdPbTwWtdDA=,iv:ux26bvCyrsHFd0aELFcZiPDwyvq0C09rpkborrYFDTc=,tag:Nd53hBoifAm7TaaGRIVIxA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
