Add namespace specific secrets

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,16 +5,15 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:iXmCYYIPUE+3,iv:W4EPR/irFYZFX0uFZqmt/6XmDSbhGrmPYaNQQdTUtt0=,tag:S9FoDgz655n9V7T0D7aBMw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:vxPDvAyw22MZ,iv:V3oIOMTWHVvAC17r1mJqddP365nBII1j35mVeGm65d4=,tag:aUdl0TI87YO/yqgxZwUYZw==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:Xkeu9aU52801wBCrtKM=,iv:+tAK6/PuCl5C/XrJBmq9mVJzKynYCCIK2QsG73ZClKs=,tag:74gN4wqdU5E/kVtL/7pVKQ==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:aiC1hctfdFYWH6KqRRXnsA==,iv:4tM9mKrNHiNXFc75wiGlw5J3a2HEfOTBNAXXskvYeuQ=,tag:OnoocMSHGEmPLFSSBYE4FA==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:S54D9Nnl/VvqUltAyxw=,iv:4pxsCwYEPW232fCTmnTPDhVFMlgaU6+jFPIv7ghEyj4=,tag:+OHVyDY2bhtY6DhKc8Ac4A==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:QX4eZNIcnb1D2bLhqg==,iv:76ixZEoKXsq/nKU9ZhL+bp/12hxiky6tpoH8wfl0/To=,tag:2dIAOpFmL+CiJlkqHNmGHA==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:wMPehDTLZi2pmhrTmA==,iv:Wjf9z2mCMvbxtqOC+IDP37skXTh+rclTnABJYI7NcSM=,tag:nuoOYgIMVRAxOFJJp6xzDw==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:C47pNWptOwuLQJFFVeBp6Tk0+RgCjFZPF7hglxg2wzn8sAf996e+fllwl5M4g697yZG8I9O7WT1mF6uwgdxkbxZVgiTLFnhmuqKr8oF7AeRnk/xbGZl4h2stfjU11eDBfD8mlj+af3EOlSoJCKknTj9qarzQGuyEbdulbuwPMpLU6SQrisIFTy0xGA6ObFujKOnHMQbhkMKRs9Z58FYwvVA7c/Kd+ysi3SsiP5JLVyAoHnk0DHD1,iv:ZvPH20K5duoiPPP3uyh1IQIYShEkqE85vYSjWUfx44E=,tag:i90UFwbR5tRZHaOawspSVw==,type:str]
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:pbRp2x7N67TFxjSkjf+nEjTErL8XwWjtfpAd3StZR7eFUnhOOtmvCDYXUJvABs6MWO5CAxLjHf7WNe1nDNiV5BxWvILUPe5LH+jsErm2bFcJX7FPEEb1HxcEiS6ehMTTCiPTFs4Uer0R4O9A1G+0Kqqm5gE5YLuT,iv:dgQrPlM33T5k6EWFbI7hJVIXvUziiF5E4ioxC1SfmJU=,tag:3I4j8JQHglocfoBBJ+wF8g==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:IeL1Tyma9AEz40gEgKDXAQ==,iv:dYPBw/DY/zlElW9yaDcvM6nBtjeaTAX0aHI6kwV1lNc=,tag:Y60T31tZ6jaSuiEeTAjsQg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:qWZvIXR9EOLgPWUAG/s=,iv:4LD94x5FPlg7CrC1daU4wGNaSLQCUjJTyrAU9vtMpXs=,tag:FgUjFVtW25Kuvav+EFBPPQ==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:QB6U84u2dqGAPuFB/haNKA==,iv:pmKaElKAHbiwa7gm/LYMtcANmkxAlDXz94EE+crTzHM=,tag:IeBBstCn8J7rxbhjCBNgbQ==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:G1qFvE/M0s97HySU4MU=,iv:ERFJg0zzTER9h8EgAvxZVPuGIO97S0KfC+OD29klEfg=,tag:oAIbrgJA7jNEaSGEHOZGvA==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:sRvSIHM+O8V7o/8PHQ==,iv:MXUwKnsXCdadXl9i86FJs03GZNoPyLnLvRaYlRgc60k=,tag:AIg8uoPnW+bf/Blep+FXDQ==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:YU8GMPw8ONJyVVMmVA==,iv:PhJiGWF5wFWqcBuNXRcscjb6qYU2bQARG/0KOm92owQ=,tag:CofFHDHqqlp1gjHENoDDfg==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:+/wyXkOdj28YkAD/3ugrFxCXu+c3OE1yVxMAFfdbQzNliP9tembxgV6tKU3wniiDEukRWWEAIxM9pdEg2CSNaSFWwRdLuLIJ1QnlE0o12U1EEeFM64aJoXTM7MaULKL0U/v1FY9XKDoFP5IKbV+f7UjT+dbHtezz1E8wAGqNJbhDRHQYNJ096gzQv3jt6Er3TfdFGf2Tv1lIDbULgjxzCzId8TVbu+xZ7MTCBPfwXuMy6OU1B+MZ,iv:hLJZS60aA+pEzMXBc1owx31EkBfITLDeA3TFK2QNXPE=,tag:TEYrKk/dMgBw6aFlG9O7TA==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:wZkbFz1L9erYJev0QhhYww==,iv:czhuILYWMtL/fbBWOHe9kNnnUeClAwrJbiAkyD++Zfs=,tag:urhRrwvVkSp/4WBVqCmNXw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +23,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRd1ozbFlrNWhEa1NOQVFp
-            V0hjWHVXWWpSOU5hdElDU0pPdGg2RHZJOFJBCklMcFg5eWpxV3JrN0x0L1BGRWZO
-            RGxSeTl5ODk1ZDg2UG4zNTFoQTR4QzQKLS0tIGQzdFVyV2Q5alNWM3I3eEZnMVVt
-            cjZNbjdmN3FCMGgwL1YzaDZ5NlR3ZG8KQUosxVkTXHAzYz1r0zvGqivBePCtUjqy
-            h/4PAeqhmlozRQuc/ctSrFp85rsqTG4JmzuGAsnQ+Mb5XlYxz0rLdA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJUUNycjUxbm5KeDM4TXdF
+            cUpSbVF3Sm1sNld6bStJTWtvR1QxSWFqNkNNClZyaWkwZFhDNS9XdU45eDlrMm90
+            QU9WRDdKelNFcHNWTXdyS3pSMFA5WGcKLS0tIDVBQzgrNTAzRFNkSzJuNEF2Unh4
+            Um5ESU80bFJRaDRLMWVRMmlIUXhBSnMKrZfCTK63lnM2QNDHj4QRPJgk1G5sI+iz
+            CHMMy305dzksrA+kmu5aJcmEPwCQH0/8v8M1PxU7QGoMnHh2DP+j/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-04T17:32:38Z"
-    mac: ENC[AES256_GCM,data:xB9QYN48zzTiZXDyKpPy5CqwCKY9whLzEAaTwDn05IQcGHresY4gWyDNss0DstQ5eenINKht0Enhf1EGz3dwXR5QEYITueW7KoKuzhAfwIVdFiNvT2uXYZ0aDbE4SB0wP1zP0UfcqhY/N7/7C7Nb9AY5ALbpDyAPHdPbTwWtdDA=,iv:ux26bvCyrsHFd0aELFcZiPDwyvq0C09rpkborrYFDTc=,tag:Nd53hBoifAm7TaaGRIVIxA==,type:str]
+    lastmodified: "2021-12-04T17:38:35Z"
+    mac: ENC[AES256_GCM,data:74EYpnyeAWKv4ajsyhbxhNF8HXmYmKNJdV5tMP2scmYr4/cyBav3xO4J1vdP+ocHOfw2SpiHHUUc9KPFeu1QP8HAhXg7LQF1kfry7ER36UYYzrscXS9ZyTFI1KFxaK4Tbu19+Imf3GTS8DKrMUZomlz9EoCJZRoY/2M9VqtFyuA=,iv:Y47svEcMeZ926cjgulJQ3RjIxsEOhsilNmW3IxYthz0=,tag:ZUmce5UIdOHeLmFGOenX9w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
